release 1.0.1 (2008-11/12)
- Support the building a WebResource with query parameters, for example:
    WebResource r = Client.create().resource(...);
    MultivaluedMap<String, String> qps = new MultivaluedMapImpl();
    qps.add("a", "foo");
    qps.add("b", "bar");
    String s = r.queryParams(qps).get(String.class);
- For JAXB-related types the set of supported media types are "application/xml"
  "text/xml", "*/*+xml", "application/json", "*/*+json".
  Previously for JAXB-related types the set of media types for XML was
  unrestricted which limited the set of possible user-declared media types for
  JSON to just "application/json".
- Fixed issue 146
  https://jersey.dev.java.net/issues/show_bug.cgi?id=146
  UriBuilder.build was implemented as specified for UriBuilder.buildFromEncoded
  and vice versa, this has been corrected. The '&' character for the template 
  value of a template parameter that is part of a query parameter is now
  percent-encoded.
- Fixed issue 127
  https://jersey.dev.java.net/issues/show_bug.cgi?id=147
  WADL generation using incorrect class loader that fails when in an OSGi
  environment.
- Fixed issue for null Pathsegment that occurred for a sub-resource locator as
  follows:
  @Path("{id}")
  public SubResource(@PathParam("id") PathSegment id)
- Fixed issue for a resource method that has the following annotations
  @POST
  @Consumes({"multipart/form-data", MediaType.APPLICATION_FORM_URLENCODED})
  and uses @FormParam and receives content of the latter declared consuming
  media type for which some @FormParam parameters do not exist in the request.
- Fixed issue 147
  https://jersey.dev.java.net/issues/show_bug.cgi?id=147
  The base path in the Web Pages for JSP templates associated with viewables
  of resource classes is configurable. The base path may be declared as the
  value of the servlet init-param:
    "com.sun.jersey.config.property.JSPTemplatesBasePath"
- Refactored WADL generation classes to be placed in base package: