@@ -57,6 +57,9 @@
         <module>spring</module>
         <module>maven-wadl-plugin</module>
         <module>jersey-multipart</module>
+        <!--
+        Apache client module not stable
         <module>apache-client</module>
+        -->
     </modules>
 </project>
