@@ -109,6 +109,22 @@ public class AsyncWebResource extends Filterable implements
         return u.toString();
     }
     
+    @Override
+    public int hashCode() {
+        return u.hashCode();
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj) return true;
+
+        if (obj instanceof WebResource) {
+            final AsyncWebResource that = (AsyncWebResource) obj;
+            return that.u.equals(this.u);
+        }
+        return false;
+    }
+
     // UniformInterface
     
     public Future<ClientResponse> head() {
